css/product.css
.product-page__container {
  padding-top: 0;
  padding-bottom: 24px;
}

.product-page__content {
  display: flex;
  flex-direction: column-reverse;
  gap: 32px;
}

.product-page__details {
  width: 100%;
}

.product-page__gallery {
  width: 100%;
  max-width: 720px;
  align-self: center;
}

.product-page__image-container {
  display: flex;
  width: 100%;
  max-width: 720px;
  align-self: center;
  justify-content: center;
  align-items: center;
  border: 1.5px solid #E8E0DA;
  border-radius: 20px;
  margin-top: 48px;
  margin-bottom: 12px;
}

.product-page__image {
  width: 100%;
  max-width: 472px;
  height: auto;
  object-fit: contain;
}

.product-page__availability {
  padding-bottom: 24px;
}

.product-page__description {
  color: var(--Dark-Brown, #36080A);
  font-family: "Almoni Neue DL 4.0 AAA";
  font-size: 20px;
  line-height: 26px;
}

.product-page__notice {
  margin: 20px 0px 20px 12px;
}

.product-page__notice .availability-popup__notice {
  margin-bottom: 0;
}

.product-page__price {
  margin-top: 20px;
  color: var(--Dark-Brown, #36080A);
  font-family: "Almoni Neue DL 4.0 AAA";
  font-size: 24px;
  font-weight: bold;
  line-height: 32px;
  margin-right: 8px;
}

.product-page__actions {
  margin-top: 20px;
}

.product-page__divider {
  width: 100%;
  margin: 32px 0;
  border: 0;
  border-top: 1px solid #E8E0DA;
}

.product-card__actions {
  display: flex;
  justify-content: flex-start;
}

@media (min-width: 768px) {
  .product-page__content {
    flex-direction: row;
  }

  .product-page__details,
  .product-page__gallery {
    width: 50%;
  }

  .product-page__gallery {
    align-self: flex-start;
  }
}

@media (min-width: 1440px) {
  .product-page__content {
    flex-direction: row;
    justify-content: space-between;
    gap: 0;
  }

  .product-page__details {
    width: auto;
    max-width: 600px;
    flex-grow: 1;
  }

  .product-page__gallery {
    width: 720px;
    max-width: none;
    flex-shrink: 0;
    align-self: flex-start;
  }

  .product-page__image-container {
    width: 720px;
    max-width: none;
    height: 480px;
    flex-shrink: 0;
    align-self: flex-start;
    padding: 0 120px;
  }

  .product-page__image {
    width: 472px;
    height: 472px;
    flex-shrink: 0;
  }
}

.product-header__heading {
  padding-bottom: 20px;
}

